tests/integration/tests/di/ui/fail/injectable_factory_sync_fn.stderr
error: #[injectable] provider functions must be async
  --> tests/di/ui/fail/injectable_factory_sync_fn.rs:15:1
   |
15 | fn make_service() -> FactoryOutput<MyServiceKey, MyService> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
